# lukuvinkkikirjasto

./: .dockerignore  .flaskenv  .gitignore  .pylintrc  Aikatalua.txt  LICENSE  Procfile  README.md  database_structure.sql  db.Dockerfile  dev.Dockerfile  devrobot.Dockerfile  docker-compose.test.yml  docker-compose.yml  empty_database.sql  pyproject.toml  requirements.txt  schema.sql  tasks.py  test.Dockerfile
$28/robot/: log.html  output.xml  report.html
.github/workflows/: main.yml  pr.yml
Dokumentaatio/: database  development.md  tuntikirjanpito.md
Dokumentaatio/backlog/: product_backlog.xlsx
Dokumentaatio/notes/: Luentotapaaminen_maanantai_22112021.md  Tapaaminen_tiistai_23112021.md
commit-03265f21b4c14c39636d3e2c4178e685eeb6607d/robot/: log.html  output.xml  report.html
commit-03265f21b4c14c39636d3e2c4178e685eeb6607d/unittests/: d_08b4cb1648a15a99___init___py.html  d_145eef247bfb46b6_app_py.html  d_145eef247bfb46b6_db_py.html  d_145eef247bfb46b6_routes_py.html  d_6f7c8c89bef6ae60_bookmark_repository_py.html  d_6f7c8c89bef6ae60_tag_repository_py.html  d_6f7c8c89bef6ae60_user_repository_py.html  d_b29c4edbf2a3f3dd___init___py.html  d_b29c4edbf2a3f3dd_test_bookmark_repository_py.html  d_b29c4edbf2a3f3dd_test_tag_repository_py.html  index.html
commit-1df067f58811e83bcb863132d2ef7ece3cd50084/robot/: log.html  output.xml  report.html
documentation/: database.md  development.md  tuntikirjanpito.md
dokumentation/: development.md  tuntikirjanpito.md
robot/: log.html  output.xml  report.html
scripts/: run_suite.sh
src/: app.py  db.py  routes.py
(+136 files in other folders)
