[tool.poetry]
name = "lukuvinkkikirjasto"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
Flask-SQLAlchemy = "^2.5.1"
gunicorn = "^20.1.0"
python-dotenv = "^0.19.2"
psycopg2 = "^2.9.2"
Werkzeug = "^2.0.2"
isbntools = "^4.3.28"

[tool.poetry.dev-dependencies]
invoke = "^1.6.0"
pylint = "^2.12.1"
robotframework-seleniumlibrary = "^5.1.3"
robotframework = "^4.1.2"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
